Ajuste_tarea_2_ccss_plantilla.ipynb
Se inicia el trabajo de la Tarea 2

--- a/tarea_2_ccss_plantilla.ipynb
+++ b/tarea_2_ccss_plantilla.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "- Fecha y hora de entrega: Lunes 9 de diciembre, 11:59pm\n",
-    "- Agregue los nombres de las personas con las que discutió esta tarea: ____ Armando Paredes ______\n",
+    "- Agregue los nombres de las personas con las que discutió esta tarea: ____ Renzo Vidal, Joel Díaz y Ange_RC ______\n",
     "- Envíe su tarea haciendo el `push` de su código a su repo en GitHub Classroom "
    ]
   },
